package gui;

public interface Button {

    void paint();
}
