package gui;

public class MacOSCheckbox implements Checkbox {

    @Override
    public void paint() {
        System.out.println("Rendering macOS checkbox");
    }
}
